--- a/index.html
+++ b/index.html
@@ -16,21 +16,25 @@
         <a class="header-pencil" href=""><img src="./images/bx_bxs-pencil.svg" alt=""></a>
     </header>
     <main>
-        <div class="profil">
-            <img src="./images/profile-E.png" alt="">
-            <p class="profil-name">Emenalo</p>
+        <div>
+            <div class="profil">
+                <img src="./images/profile-E.png" alt="">
+                <p class="profil-name">Emenalo</p>
+            </div>
+            <div class="profil">
+                <img src="./images/profile-O.png" alt="">
+                <p class="profil-name">Onyeka</p>
+            </div>
         </div>
-        <div class="profil">
-            <img src="./images/profile-O.png" alt="">
-            <p class="profil-name"></p>
-        </div>
-        <div class="profil">
-            <img src="./images/Profile-T.png" alt="">
-            <p class="profil-name"></p>
-        </div>
-        <div class="profil">
-            <img src="./images/Kids.png" alt="">
-            <p class="profil-name"></p>
+        <div>
+            <div class="profil">
+                <img src="./images/Profile-T.png" alt="">
+                <p class="profil-name">Thelma</p>
+            </div>
+            <div class="profil">
+                <img src="./images/Kids.png" alt="">
+                <p class="profil-name">Kids</p>
+            </div>
         </div>
     </main>
 </body>
