--- a/index.html
+++ b/index.html
@@ -4,20 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/normalize.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <img src="./images/Vector.svg" alt="">
-        <a href=""></a>
+        <img class="header-logo" src="./images/Vector.svg" alt="">
+        <a class="header-pencil" href=""><img src="./images/bx_bxs-pencil.svg" alt=""></a>
     </header>
     <main>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="profil">
+            <img src="./images/profile-E.png" alt="">
+            <p class="profil-name">Emenalo</p>
+        </div>
+        <div class="profil">
+            <img src="./images/profile-O.png" alt="">
+            <p class="profil-name"></p>
+        </div>
+        <div class="profil">
+            <img src="./images/Profile-T.png" alt="">
+            <p class="profil-name"></p>
+        </div>
+        <div class="profil">
+            <img src="./images/Kids.png" alt="">
+            <p class="profil-name"></p>
+        </div>
     </main>
 </body>
 </html>
