--- a/index.html
+++ b/index.html
@@ -17,25 +17,28 @@
     </header>
     <main>
         <div>
-            <div class="profil">
-                <img src="./images/profile-E.png" alt="">
-                <p class="profil-name">Emenalo</p>
-            </div>
-            <div class="profil">
-                <img src="./images/profile-O.png" alt="">
-                <p class="profil-name">Onyeka</p>
-            </div>
+            <div class="profile-selection">
+                <div class="profil">
+                    <a href=""> <img src="./images/profile-E.png" alt=""> </a> 
+                    <p class="profil-name">Emenalo</p>
+                </div>
+                <div class="profil">
+                    <a href=""> <img src="./images/profile-O.png" alt=""> </a> 
+                    <p class="profil-name">Onyeka</p>
+                </div>
+            </div>    
+            <div class="profile-selection">
+                <div class="profil">
+                    <a href=""> <img src="./images/profile-T.png" alt=""> </a> 
+                    <p class="profil-name">Thelma</p>
+                </div>
+                <div class="profil">
+                    <a href=""> <img src="./images/Kids.png" alt=""> </a> 
+                    <p class="profil-name">Kids</p>
+                </div>
+            </div>     
         </div>
-        <div>
-            <div class="profil">
-                <img src="./images/Profile-T.png" alt="">
-                <p class="profil-name">Thelma</p>
-            </div>
-            <div class="profil">
-                <img src="./images/Kids.png" alt="">
-                <p class="profil-name">Kids</p>
-            </div>
-        </div>
+       
     </main>
 </body>
 </html>
