--- a/index.html
+++ b/index.html
@@ -11,34 +11,16 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <img class="header-logo" src="./images/Vector.svg" alt="">
-        <a class="header-pencil" href=""><img src="./images/bx_bxs-pencil.svg" alt=""></a>
-    </header>
     <main>
-        <div>
-            <div class="profile-selection">
-                <div class="profil">
-                    <a href=""> <img src="./images/profile-E.png" alt=""> </a> 
-                    <p class="profil-name">Emenalo</p>
-                </div>
-                <div class="profil">
-                    <a href=""> <img src="./images/profile-O.png" alt=""> </a> 
-                    <p class="profil-name">Onyeka</p>
-                </div>
-            </div>    
-            <div class="profile-selection">
-                <div class="profil">
-                    <a href=""> <img src="./images/profile-T.png" alt=""> </a> 
-                    <p class="profil-name">Thelma</p>
-                </div>
-                <div class="profil">
-                    <a href=""> <img src="./images/Kids.png" alt=""> </a> 
-                    <p class="profil-name">Kids</p>
-                </div>
-            </div>     
-        </div>
-       
+        <header>
+            <div class="nav-bar">
+                <img src="./images/burger-menu-white.png" alt="burger-menu">
+            </div>
+        </header>
+        <section class="menu-anime">
+
+        </section>
     </main>
+    <script src="./js/app.js"></script>
 </body>
 </html>
